objects/Work_Order__c.object
<CustomObject>
    <fields>
        <fullName>ClosedDate_c__c</fullName>
        <label>Work Order: Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ComplaintId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>CMPL123CME__Complaint__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Work Order: Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WO_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Audit / Consulting / Project</fullName>
                </value>
                <value>
                    <fullName>Calibration / Metrology</fullName>
                </value>
                <value>
                    <fullName>Connectivity</fullName>
                </value>
                <value>
                    <fullName>Control/Reconditioning</fullName>
                </value>
                <value>
                    <fullName>Corrective Maintenance</fullName>
                </value>
                <value>
                    <fullName>Customer Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Customer Training</fullName>
                </value>
                <value>
                    <fullName>Classroom Training</fullName>
                </value>
                <value>
                    <fullName>Field Action</fullName>
                </value>
                <value>
                    <fullName>Hypercare (COPAN)</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Internal Projects</fullName>
                </value>
                <value>
                    <fullName>Internal Training</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Management/ Organization</fullName>
                </value>
                <value>
                    <fullName>Pre Installation inspection</fullName>
                </value>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Remote support</fullName>
                </value>
                <value>
                    <fullName>Repair with Return</fullName>
                </value>
                <value>
                    <fullName>Return on service</fullName>
                </value>
                <value>
                    <fullName>Site Acceptance Test (COPAN)</fullName>
                </value>
                <value>
                    <fullName>Site move / Removal</fullName>
                </value>
                <value>
                    <fullName>Technical Pre-Sales Visit</fullName>
                </value>
                <value>
                    <fullName>Time Off</fullName>
                </value>
                <value>
                    <fullName>Tool kit calibration</fullName>
                </value>
                <value>
                    <fullName>Upgrade / Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WO_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cannot Complete</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WO_Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Routine Scheduled Call</fullName>
                </value>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Key Technical Meeting</fullName>
                </value>
                <value>
                    <fullName>Pre Training</fullName>
                </value>
                <value>
                    <fullName>Training New</fullName>
                </value>
                <value>
                    <fullName>Training Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Software updates</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>BTA 3D w/OBSERVA</fullName>
                </value>
                <value>
                    <fullName>BTA 3D OBSERVA &amp; MB</fullName>
                </value>
                <value>
                    <fullName>BTA 3D w/SELECT</fullName>
                </value>
                <value>
                    <fullName>BTA 3D SELECT &amp; MB</fullName>
                </value>
                <value>
                    <fullName>BTA 3D MYLA &amp; MB</fullName>
                </value>
                <value>
                    <fullName>BTA 3D w/MYLA</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 60/XL w/MYLA</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 60/XL w/OBSERVA</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 60/XL NO DM</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 C w/MYLA</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 C w/OBSERVA</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 C NO DM</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 AES</fullName>
                </value>
                <value>
                    <fullName>VIRTUO</fullName>
                </value>
                <value>
                    <fullName>D-COUNT 25/50</fullName>
                </value>
                <value>
                    <fullName>D-COUNT II</fullName>
                </value>
                <value>
                    <fullName>BTA 3D BME</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 C BME</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 60/XL BME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WO_Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Type__c</fullName>
        <label>SAP Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YM01</fullName>
                    <label>YM01 - On Demand</label>
                </value>
                <value>
                    <fullName>YM02</fullName>
                    <label>YM02 - Initialized from Sales Order</label>
                </value>
                <value>
                    <fullName>YM03</fullName>
                    <label>YM03 - Repair Center</label>
                </value>
                <value>
                    <fullName>YM04</fullName>
                    <label>YM04 - Timesheet</label>
                </value>
                <value>
                    <fullName>YM05</fullName>
                    <label>YM05 - Maintenance Plan</label>
                </value>
                <value>
                    <fullName>YM06</fullName>
                    <label>YM06 - Allocated to Customer</label>
                </value>
                <value>
                    <fullName>YM07</fullName>
                    <label>YM07 - Toolkit Calibration Order</label>
                </value>
                <value>
                    <fullName>YM08</fullName>
                    <label>YM08 - Internal IB</label>
                </value>
                <value>
                    <fullName>YREF</fullName>
                    <label>YREF - Refurbish</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Work Order</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>